# maya

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: python-ci.yml
examples/: demo.sh
src/maya/: __init__.py  __main__.py  main.py
src/maya/templates/: README.md  justfile  justfile-uv  pyproject.toml
src/maya/templates/.github/workflows/: python-ci.yml
tests/: test_main.py
